tutorial page updated

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,43 @@ html, body {
 	right:10;
 	bottom:10;
 }
+
+#papers {
+  position:relative;
+  margin-left: 2.5em;
+  width:900px;
+  height:680px;
+}
+
+/* paper slider css*/
+.paper-slide {
+  background:#eee;
+  box-shadow:0 0 15px rgba(0,0,0,.3);
+}
+.ps-nav {
+  display:block;
+  width:2em;
+  height:2em;
+  border:1px solid #aaa;
+  background:#ddd;
+  line-height:2em;
+  text-align:center;
+  position:absolute;
+  top:50%;
+  margin-top:-1em;
+  border-radius:2em;
+}
+.ps-nav-prev {
+  left:-2.5em;
+}
+.ps-nav-next {
+  right:-2.5em;
+}
+.ps-nav:hover {
+  color:#eee;
+  background:#08c;
+}
+.tutorialscreen {
+max-width:700px;
+max-height:500px;
+}
