--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html, body {
 	position: relative;
 }
 
-#menu, #options, #tutorial, #leaderboard {
+#menu, #options, #tutorial, #leaderboard, #achievements {
 	position: relative;
 }
 
@@ -21,11 +21,8 @@ html, body {
 }
   
 #teamlogo {
-	position: absolute;
 	width: 480px;
 	height: 360px;
-	right:10;
-	bottom:10;
 }
 
 #papers {
@@ -73,4 +70,16 @@ padding-left: 25px;
 }
 .aligncenter {
 padding-left: 25px;
+}
+
+.shadows {
+	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+	font-size: 16px;
+	padding: 4px 50px;
+	text-align: center;
+	text-transform: uppercase;
+	text-rendering: optimizeLegibility;
+	position: absolute;
+	right:10;
+	bottom:10;
 }
