--- a/css/styles.css
+++ b/css/styles.css
@@ -84,3 +84,17 @@ padding-left: 25px;
 	right:10;
 	bottom:10;
 }
+
+		
+.leaderboardTable {
+	width: 500;
+	position: absolute;
+	top:100;
+	left:10;
+}
+
+.tftable {font-size:12px;color:#333333;width:100%;border-width: 1px;border-color: #729ea5;border-collapse: collapse;}
+.tftable th {font-size:12px;background-color:#acc8cc;border-width: 1px;padding: 8px;border-style: solid;border-color: #729ea5;text-align:left;}
+.tftable tr {background-color:#d4e3e5;}
+.tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #729ea5;}
+.tftable tr:hover {background-color:#ffffff;}
